--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
 </head>
 <body>
 
+<div class="container">
+  <div class="row"></div>
+  <div class="row"></div>
+  <div class="row"></div>
+</div>
+
 <%= yield %>
 <%= javascript_include_tag "application" %>
 </body>
